--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -15,9 +15,9 @@
 <body>
 
     <%- include common/header.ejs %>
-    <div class="container-fluid">
+    <div class="container-fluid pr-1">
         <div class="row pt-lg-5">
-            <div class="col-12 col-xl-6 ml-xl-auto py-5 pl-5 text-dark mt-4">
+            <div class="col-12 col-sm-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
                 <h1 class="display-5 font-wt-900 site-blue lh-5">Vakyaansh: A crowdsourcing initiative for Indic
                     languages
                 </h1>
@@ -28,7 +28,7 @@
                     repository of Indian voices to this end.
                 </p>
             </div>
-            <div class="col-xl-5 col-12 pt-5 mt-5 text-right px-0">
+            <div class="col-12 col-sm-5 col-lg-5 text-right px-0 align-self-center">
                 <img src="/img/home.svg" class="img img-fluid">
             </div>
         </div>
@@ -110,9 +110,13 @@
                     </br>
                     Every minute of your contribution will make a huge difference and bring us closer to our objective. 
                 </p>
-
-                <a role="button" href="/record" class="mt-3 btn btn-lg bg-white px-5 py-2 text-primary">START
-                    RECORDING</a>
+                <div class="row">
+                    <div class="col-8 col-lg-5">
+                        <a role="button" href="/record" class="btn bg-white shadow text-primary h6 w-100 rounded mt-3 p-3">
+                            START RECORDING
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="col-8 col-lg-4 mb-3 text-center p-5 align-self-center">
                 <img src="img/about-us-2.svg" alt="Speaker Diversity" class="img img-fluid">
@@ -134,9 +138,9 @@
                 complex societal problems at scale. We do this by leveraging the open source digital infrastructure we
                 have created called Sunbird and by following a way of thinking and doing called the Societal Platform
                 Approach.
-            </br>
-        </br>
-            EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada. 
+                </br>
+                </br>
+                EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.
 
             </div>
         </div>
