--- a/views/record.ejs
+++ b/views/record.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-    <link href="css/notyf.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.css" integrity="sha256-1T9PQaTbbUusCVH72ahoGVZ1axGmU5uAOgSb4/GNXj8=" crossorigin="anonymous">
     <!-- My custom css -->
     <link rel="stylesheet" type="text/css" href="css/record.css">
 </head>
@@ -98,7 +98,6 @@
             </div>
         </div>
         <div id="time-progress" class="position-fixed text-center">
-            <!-- <img src="img/progress-bar-sq.svg" alt="time progress" class="img img-fluid"> -->
             <div id="graphcontainer" class="mx-auto">
                 <div id="graphbackground"></div>
                 <div id="graphbar"></div>
@@ -106,11 +105,10 @@
                 </div>
             </div>
             <div>
-                <span class="h6" id="time-value">0s</span><span class="text-muted">/30 min</span>
+                <span class="h6" id="time-value">0s</span><span class="text-muted">/30 mins</span>
                 <p>away from reaching your goal!</p>
             </div>
         </div>
-
     </div>
 
     <%- include common/footer.ejs %>
@@ -182,7 +180,7 @@
 
     <script
         src="https://cdn.jsdelivr.net/gh/mattdiamond/Recorderjs@08e7abd99739be6946f19f6806ccb368138f2dd3/dist/recorder.js"></script>
-    <script src="js/notyf.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.js" integrity="sha256-22tRfnWCd6VIZ8O39ATlPY3pctqfFp9tFsyl4swl+VQ=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
