Changes to Thank you page, Home page about speakers data

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -123,3 +123,20 @@ h6,
 .form-control.is-invalid {
   background-image: none;
 }
+
+.spinner {
+  width: 3rem;
+  height: 3rem;
+  display: inline-block;
+  border-width: .5rem;
+  border-color: #007bff;
+  border-top-color: #fff;
+  animation: spin 1s infinite linear;
+  border-radius: 100%;
+  border-style: solid;
+}
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
