--- a/public/css/thank-you.css
+++ b/public/css/thank-you.css
@@ -2,7 +2,7 @@
     background: url(/img/bg-thank-you.svg) no-repeat;
     background-size: cover;
   }
-  #time-progress {
+  #progress-percent-wrapper {
     right: 1rem;
     bottom: 2.8rem;
   }
