--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,23 +28,25 @@
                     there is a need for an enormous repository of diversified Indian voices. Through
                     Vakyaansh, we are reaching out to you to contribute your voices to create a diverse open source
                     repository of Indian voices to this end.<a class="ml-1" href="/about-us"> Know More</a></p>
-                <div class="row align-items-center mt-4">
+                <div class="row mt-4">
                     <div class="col-8 col-lg-5">
                         <a role="button" href="#speaker-details"
                             class="btn btn-outline-primary h6 w-100 rounded mt-4 p-3">
                             START RECORDING
                         </a>
                     </div>
-                    <div class="col-4 text-center align-self-end">
-                        <p class="mb-0">As of Today</p>
-                        <div class="mb-0 h5 mb-auto"><span class="h2">5000</span><span>/10000</span></div>
-                        <p class="mb-0">Hours recorded</p>
-                    </div>
                 </div>
-                <div class="row pt-4">
-                    <div class="col-5 text-center">
-                        <p class="mb-0 h3">1200</p>
-                        <p class="mb-0">Speaker contributed</p>
+                <div class="row mt-4" id="speaker-data">
+                    <div class="col-4 col-lg-3 text-center" id="loader">
+                        <div><span class="spinner"></span></div>
+                    </div>
+                    <div class="col-6 col-lg-4 text-left d-none" id="speakers-wrapper">
+                        <p class="mb-0 h3" id="speaker-value">0</p>
+                        <p class="mb-0">speakers contributed</p>
+                    </div>
+                    <div class="col-6 col-lg-4 text-left d-none" id="hours-wrapper">
+                        <p class="mb-0"><span class="h3" id="hour-value">0</span><sup class="h6">/10000</sup></p>
+                        <p class="mb-0">hours recorded</p>
                     </div>
                 </div>
 
