--- a/views/terms-and-conditions.ejs
+++ b/views/terms-and-conditions.ejs
@@ -17,13 +17,13 @@
 <body>
 
     <%- include common/header.ejs %>
-    <div class="container-fluid bg-primary">
-        <div class="row pt-5 justify-content-center">
+    <div class="container-fluid">
+        <div class="row pt-5 justify-content-center bg-primary">
             <div class="col-lg-6 col-md-8 col-sm-10 p-5 text-light text-center mt-5">
                 <h1 class="display-5 font-wt-900">Terms and Conditions</h1>
             </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center bg-primary" id="nav-row">
             <div class="col-md-8 col-sm-10 p-5 text-light text-center">
                 <a href="#terms-of-use" class="text-white h5 p-3 badge-pill border mx-2">Terms of Use</a>
                 <a href="#privacy-policy" class="text-white h5 p-3 badge-pill border mx-2">Privacy Policy</a>
@@ -33,8 +33,8 @@
     </div>
 
     <div class="container-fluid p-5">
-        <div class="text-center my-5">
-            <h1 class="display-5 font-wt-900" id="terms-of-use">Terms of Use</h1>
+        <div class="text-center my-5 pt-5" id="terms-of-use">
+            <h1 class="display-5 font-wt-900">Terms of Use</h1>
         </div>
         <div class="row justify-content-center">
             <div class="col-10 col-lg-6 text-left">
@@ -196,8 +196,8 @@
             </div>
         </div>
 
-        <div class="text-center my-5 pt-5">
-            <h1 class="display-5 font-wt-900" id="privacy-policy">Privacy Policy</h1>
+        <div class="text-center my-5 pt-5" id="privacy-policy">
+            <h1 class="display-5 font-wt-900">Privacy Policy</h1>
         </div>
         <div class="row justify-content-center">
             <div class="col-10 col-lg-6 text-left">
@@ -394,9 +394,8 @@
                 </br>
                 Voice recordings, along with any optionally provided demographic data, shall be available in the Website
                 database for public consumption and use under
-                <a
-                        href="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0 1.0 Universal (CC0 1.0)
-                        Public Domain Dedication.</a>
+                <a href="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0 1.0 Universal (CC0 1.0)
+                    Public Domain Dedication.</a>
 
                 </br></br>
                 Text prompts provided on the Website to create Voice Recordings are
@@ -405,8 +404,8 @@
                     <li>https://github.com/indicnlpweb/indicnlp_catalog</li>
                     <li>https://github.com/facebookresearch/LASER/tree/master/tasks/WikiMatrix</li>
                 </ul>
-                
-                
+
+
             </div>
 
         </div>
@@ -422,6 +421,18 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script>
+        $navRow = $("#nav-row");
+        const navPosition = $navRow.offset();
+        const $window = $(window);
+        $window.scroll(function () {
+            if ($window.scrollTop() > navPosition.top) {
+                $navRow.addClass('fixed-top');
+            } else {
+                $navRow.removeClass('fixed-top');
+            }
+        });
+    </script>
 </body>
 
 </html>
